--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
+    "autoprefixer": "^10.4.24",
+    "clsx": "^2.1.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "zod": "^3.24.2",
-    "@hookform/resolvers": "^4.1.0",
     "signature_pad": "^5.0.4",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
@@ -30,4 +31,3 @@
     "typescript": "^5.7.3"
   }
 }
-
