feat: add Google Places API integration for business lookup
- Add googlePlaces.service.ts for phone, website, address lookup
- Combine OpenCorporates + Google Places results in parallel
- Track fieldSources to show which API provided each field
- Update Step1EINLookup to pass phone, website, fieldSources
- Update Step2ConfirmBusiness with source badges (blue=Public Records, green=Google)
- Add GOOGLE_PLACES_API_KEY to config and env examples
- Fix CORS to allow x-tenant-slug header

OpenCorporates is authoritative for legal/registration info
Google Places fills in phone, website, and supplements address gaps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       NODE_ENV: production
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS}
       OPENCORPORATES_API_KEY: ${OPENCORPORATES_API_KEY}
+      GOOGLE_PLACES_API_KEY: ${GOOGLE_PLACES_API_KEY}
       CRM_WEBHOOK_URL: ${CRM_WEBHOOK_URL}
       CRM_API_KEY: ${CRM_API_KEY}
     ports:
