--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ ALLOWED_ORIGINS=https://yourdomain.com
 NEXT_PUBLIC_API_URL=https://api.yourdomain.com
 NEXT_PUBLIC_TENANT_SLUG=
 OPENCORPORATES_API_KEY=
+GOOGLE_PLACES_API_KEY=
 CRM_WEBHOOK_URL=
 CRM_API_KEY=
 
