--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -5,6 +5,7 @@ PORT=4000
 NODE_ENV=development
 ALLOWED_ORIGINS=http://localhost:3000
 OPENCORPORATES_API_KEY=
+GOOGLE_PLACES_API_KEY=
 CRM_WEBHOOK_URL=
 CRM_API_KEY=
 
